[package]
name = "sgx"
version = "0.1.0"
authors = ["Lily Sturmann <lsturman@redhat.com>", "Nathaniel McCallum <npmccallum@redhat.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "crypto"]
std = ["anyhow", "iocuddle", "libc", "mmap", "vdso"]
crypto = ["std", "rsa", "sha2", "num-traits", "rand"]

[dependencies]
bitflags = "1.2"
bounds  = { path = "../bounds" }
enumerate  = { path = "../enumerate" }
intel-types = { path = "../intel-types" }
memory = { path = "../memory" }
anyhow = { version = "1", optional = true }
mmap = { path = "../mmap", optional = true }
vdso = { path = "../vdso", optional = true }
iocuddle = { path = "../iocuddle", optional = true }
libc = { version = "0.2.73", optional = true }
rsa = { version = "0.3.0", optional = true }
sha2 = { version = "0.9.1", optional = true }
num-traits = { version = "0.2.12", optional = true }
rand = { version = "0.7.3", optional = true }

[dev-dependencies]
rstest = "0.6"
base64 = "0.12.3"

[build-dependencies]
cc = "1.0"

[patch.crates-io]
rsa = { git = "https://github.com/RustCrypto/rsa", rev = "a649ce1" }
